--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Performance">
+        <activity android:name=".memory.MemoryShakeActivity"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
